--- a/pipeline/pipeline_RuleBasedMapping.json
+++ b/pipeline/pipeline_RuleBasedMapping.json
@@ -46,6 +46,32 @@
 						"type": "DataFlowReference"
 					}
 				}
+			},
+			{
+				"name": "dataflow4",
+				"type": "ExecuteDataFlow",
+				"dependsOn": [
+					{
+						"activity": "RuleBaseMappingDF",
+						"dependencyConditions": [
+							"Succeeded"
+						]
+					}
+				],
+				"policy": {
+					"timeout": "7.00:00:00",
+					"retry": 0,
+					"retryIntervalInSeconds": 30,
+					"secureOutput": false,
+					"secureInput": false
+				},
+				"userProperties": [],
+				"typeProperties": {
+					"dataflow": {
+						"referenceName": "dataflow4",
+						"type": "DataFlowReference"
+					}
+				}
 			}
 		],
 		"annotations": []
